--- a/go/chicken-merge.html
+++ b/go/chicken-merge.html
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stickman-climb-2.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stickman-climb-2.png">
+                            <img src="https://sudoku-online.github.io/img/stickman-climb-2.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/water-color-sort.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/water-color-sort.png">
+                            <img src="https://sudoku-online.github.io/img/water-color-sort.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/tag.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/tag.png">
+                            <img src="https://sudoku-online.github.io/img/tag.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/cat-trap.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/cat-trap.png">
+                            <img src="https://sudoku-online.github.io/img/cat-trap.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/funny-shooter-2.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/funny-shooter-2.png">
+                            <img src="https://sudoku-online.github.io/img/funny-shooter-2.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stick-merge.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stick-merge.png">
+                            <img src="https://sudoku-online.github.io/img/stick-merge.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stickman-bike.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stickman-bike.png">
+                            <img src="https://sudoku-online.github.io/img/stickman-bike.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/city-car-driving-stunt-master.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/city-car-driving-stunt-master.png">
+                            <img src="https://sudoku-online.github.io/img/city-car-driving-stunt-master.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +329,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/moto-x3m-spooky-land.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/moto-x3m-spooky-land.png">
+                            <img src="https://sudoku-online.github.io/img/moto-x3m-spooky-land.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +344,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stick-defenders.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stick-defenders.png">
+                            <img src="https://sudoku-online.github.io/img/stick-defenders.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +359,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/volley-random.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/volley-random.png">
+                            <img src="https://sudoku-online.github.io/img/volley-random.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +374,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/cyber-cars-punk-racing.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/cyber-cars-punk-racing.png">
+                            <img src="https://sudoku-online.github.io/img/cyber-cars-punk-racing.png">
                             <div class="product-badge">       
                             </div>
                         </div>
